# multi-ai-agent-learning

./: .gitignore  README.md  pyproject.toml
week1/: 1.ipynb  README.md  app.py
week2/: 1 copy.ipynb  1.ipynb  2.ipynb  3.ipynb  4.ipynb  app.py  demo.py  integration_openai-agents (1).ipynb
week2/deep_research/: deep_research.py  email_agent.py  research_manager.py
week2/voice project/: voice agent.ipynb
week3/coder/: output.txt  result.txt  series_calculation.txt
week3/coder/output/: code_and_output.txt  optimized_code_and_output.txt
week3/coder/src/coder/: crew.py  main.py
week3/debate/: pyproject.toml
week3/debate/output/: decide.md  oppose.md  propose.md
week3/debate/src/debate/: main.py
week3/engineering_team/: pyproject.toml
week3/engineering_team/memory/: long_term_memory_storage.db
week3/engineering_team/output/: accounts.py  accounts_api.py  accounts_architecture.md  accounts_data.py  accounts_deployment.md  accounts_documentation.md  accounts_performance_report.md  accounts_requirements.md  accounts_security_review.md  accounts_test_strategy.md  accounts_ui_design.md  app.py  integration_test_accounts.py  test_accounts.py
week3/finacial_researcher/: pyproject.toml
week3/finacial_researcher/output/: credit_analysis.md  esg_analysis.md  fundamental_analysis.md  investment_recommendation.md  market_strategy.md  quantitative_analysis.md  sector_analysis.md
week3/finacial_researcher/src/finacial_researcher/: crew.py  main.py
week3/finacial_researcher/src/finacial_researcher/config/: agents.yaml  tasks.yaml
(+6 files in other folders)
